--- a/c04.configure-vscode-that-like-atom-editor.md
+++ b/c04.configure-vscode-that-like-atom-editor.md
@@ -133,3 +133,11 @@ Exec=code-oss  --disable-gpu --unity-launch %F
 ```
 
 ### 5-3. Wait until bug fixed
+
+## 6. Add default standard into `settings.json`
+
+Otherwise `filesysten` of c++17 cannot be lint in some env(e.g. Linux)
+
+```
+"C_Cpp.default.cppStandard": "c++17"
+```
