--- a/c04.configure-vscode-that-like-atom-editor.md
+++ b/c04.configure-vscode-that-like-atom-editor.md
@@ -1,4 +1,4 @@
-# C04.Configure a vscode like the atom editor
+# C04.Configure a vscode
 
 ## 1. Needed Package
 
@@ -48,10 +48,11 @@ Monaco
 Atom One Dark Theme
 beautify
 bash beautify
+Browser Preview
 vscode-icon
-C/C++ #do not recommend, recommend C++ Intellsense
+C/C++ 
 C/C++ Snippets
-CMake
+CMake Tools
 Doxygen Documentation Generator
 LaTeX Workshop
 Python #pylintrc is necessary
