--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -51,7 +51,7 @@ pcsc-tools #smart card tools for command such as pcsc_scan
 wps-office
 wps-office-fonts
 
-wps-fonts
+ttf-wps-fonts
 drawio-desktop-bin
 haroopad # good editor for markdown
 
