--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -88,7 +88,7 @@ opencv opencv-samples #(check : pkg-config --cflags --libs opencv)
 hdf5 vtk glew #(dependency for opencv)
 #(if you don't need they, go to /usr/lib/pkgconfig/opencv.pc)
 #(delete -lopencv_viz)
-python-numpy python-matplotlib python-pylint
+python-numpy python-matplotlib python-pylint python-pillow
 ruby-ronn # (convert .md to linux man)
 # nodejs node-gyp electron
 go
