--- a/2.install-cinnamon-desktop.md
+++ b/2.install-cinnamon-desktop.md
@@ -91,7 +91,7 @@ pacman –S firefox
 install 繁體中文與字體
 
 ```bash
-sudo pacmam -S wqy-zenhei ttf-arphic-ukai
+sudo pacman -S wqy-zenhei ttf-arphic-ukai
 ```
 
 or refer to:
