--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -71,8 +71,9 @@ ttf-monaco # for monaco
 ### 3-1. These package can be installed by script\(see 6.\)
 
 ```bash
-#2 select 1
-ocl-icd opencl-mesa opencl-headers #amd-gpu opencl
+#select 1 of 3
+ocl-icd opencl opencl-headers 
+#amd-gpu opencl-mesa
 #cuda opencl-nvidia python-pycuda #nvidia-gpi opencl
 
 #for jserv course
