--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -72,9 +72,9 @@ ttf-monaco # for monaco
 
 ```bash
 #select 1 of 3
-ocl-icd opencl opencl-headers 
-#amd-gpu opencl-mesa
-#cuda opencl-nvidia python-pycuda #nvidia-gpi opencl
+ocl-icd intel-compute-runtime opencl-headers 
+#amd-gpu opencl-mesa opencl-headers 
+#cuda opencl-nvidia python-pycuda #nvidia-gpi
 
 #for jserv course
 cppcheck aspell colordiff 
