--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -43,6 +43,7 @@ rsync
 cdrtools #can use wodim to burn .iso file to cd/dvd/bd
 #command is wodim dev=/dev/cdrom -v -data your_iso_file.iso
 pcsc-tools #smart card tools for command such as pcsc_scan
+xorg-font-util
 ```
 
 ## 2. There are can be install by yay
@@ -59,7 +60,7 @@ downgrade #downgrade package of pacman, suggest to use local
 ezusb # smart card dirver for EZ100PU
 # These are suggestion for font
 #ttf-google-fonts-git #good fonts for coding (like PT mono), but too heavey
-consolas-font #for terminal
+# consolas-font #for terminal #can't install with yay, must modify xorg-font-utils of denpendency in PKGBUILD file
 ttf-ms-fonts # for Courier New, Georgia, Times New Roma
 ttf-paratype #good fonts for coding (like PT mono)
 ttf-meslo # for meslo
