--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -40,6 +40,7 @@ rsync
 # It can implement copy and exclude some files or directories:
 # rsync -av --progress SourceFolder /DestinationFolder --exclude TheFolderOrFileNameToExclude)
 #net-tools #ifconfig route -n
+smartmontools #check ssd smart [Media_Wearout_Indicator]
 cdrtools #can use wodim to burn .iso file to cd/dvd/bd
 #command is wodim dev=/dev/cdrom -v -data your_iso_file.iso
 pcsc-tools #smart card tools for command such as pcsc_scan
