--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -36,6 +36,7 @@ gnu-netcat
 #Netcat is a simple Unix utility which reads and writes data across network connections,
 #using TCP or UDP protocol.
 rsync
+powertop # monitor power for /dev
 # (rsync is a good tool for backup on the local and the remote,
 # It can implement copy and exclude some files or directories:
 # rsync -av --progress SourceFolder /DestinationFolder --exclude TheFolderOrFileNameToExclude)
