--- a/m3.how-to-use-tar-and-7z.md
+++ b/m3.how-to-use-tar-and-7z.md
@@ -54,6 +54,19 @@ tar -xvf file_name.tar.xz
 tar -xvf file_name.tar.xz -C folder(or output path)
 ```
 
+### 1-3. Parallel with **pixz**
+
+Compress
+
+```bash
+tar -I pixz -cvf file_name.tar.xz -C folder(or output path)
+```
+Decompress
+
+```bash
+tar -I pixz -xvf file_name.tar.xz -C folder(or output path)
+```
+
 ## 2. 7z
 
 If you don't need to want to keep soft-link, and want to file can cross-platform\(OS\).
