--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -279,6 +279,12 @@ After generation, you can also check it :
 cat /mnt/etc/fstab
 ```
 
+## 7.A If you create RAID with mdadm, do:
+
+``` bash
+mdadm --detail --scan --verbose   >>   /mnt/etc/mdadm.conf
+```
+
 ![check fs](image/genfs.PNG)
 
 ## 8. chroot to /mnt
@@ -295,7 +301,10 @@ Let's do some system configure next!
 
 ## 9. Install first tools
 
-`pacman -S base bash-completion tree vim python`
+```
+pacman -S base bash-completion tree vim python 
+pacman -S xfsprogs # if ur fs is xfs
+```
 
 ## 10. Configure time
 
@@ -490,6 +499,11 @@ note:
 
 if your computer is intel cpu, then amd-ucode.img becomes to intel-ucode.img.
 
+Last, generate kernel:
+```bash
+mkinitcpio -p linux
+```
+
 ## 13-A. Configuer boot with LVM & dm-crypt
 
 ### 13-A-1. generate initcpio
@@ -551,6 +565,22 @@ initrd /initramfs-linux.img
 initrd /amd-ucode
 options cryptdevice=UUID=<YOUR-PARTITION-UUID>:lvm:allow-discards resume=/dev/mapper/vg0-swap root=/dev/mapper/vg0-root rw quiet
 ```
+
+## 13-B. Configuer boot with raid
+
+Needed package:
+``` bash
+pacman -S xfsprogs #if ur fs is xfs
+pacman -S mdadm
+```
+
+open `vim /etc/mkinitcpio.conf`
+modify here:
+```
+HOOKS="base udev autodetect modconf block mdadm_udev filesystems fsck"
+BINARIES="/sbin/mdmon"
+```
+
 
 ## 14. reboot and login your user
 
