--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -353,10 +353,9 @@ It  permit your system can install 32-bit package.
 
    ```bash
    passwd #set root password
-   useradd -mg users -G wheel,storage,power -s /bin/bash your_new_user
+   useradd -mg users -G wheel,storage,power -s /bin/bash <your_new_user>
    #your_new_user is your username, you can replace it as needed
-   passwd your_new_user
-   chage -d 0 your_new_user
+   passwd your_new_user # set <your_new_user>'s password
    ```
 
 2. Configure sudo
