--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -220,6 +220,13 @@ mount /dev/sda1 /mnt/boot
 
 ## 5. Configure  mirror list for install arch-Linux and pacman
 
+1st, please go here
+https://www.archlinux.org/mirrorlist/all/
+to update your mirror list
+```
+wget https://www.archlinux.org/mirrorlist/all/ -O /etc/pacman.d/mirrorlist
+```
+
 open /etc/pacman.d/mirrorlist
 
 ```bash
