--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -150,6 +150,7 @@ sudo pacman -S gnome gnome-tweaks filemanager-actions
 ### 8-1. Install top icon for flameshot
 ``` bash
 yay gnome-shell-extension-topicons-plus
+removeable-drive-menu
 ```
 
 
