--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -148,11 +148,19 @@ sudo pacman -S gnome gnome-tweaks filemanager-actions
 
 
 ### 8-1. Install top icon for flameshot
+
+1st
+```
+sudo pacman -S chrome-gnmoe-shell
+```
+go to https://extensions.gnome.org/
+
+install
+
 ``` bash
-yay gnome-shell-extension-topicons-plus
+gnome-shell-extension-topicons-plus
 removeable-drive-menu
 ```
-
 
 ### 8-2. after install
 
