--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -47,6 +47,7 @@ cdrtools #can use wodim to burn .iso file to cd/dvd/bd
 #command is wodim dev=/dev/cdrom -v -data your_iso_file.iso
 pcsc-tools #smart card tools for command such as pcsc_scan
 xorg-font-util
+usbutils
 ```
 
 ## 2. There are can be install by yay
@@ -54,6 +55,8 @@ xorg-font-util
 ```bash
 wps-office
 wps-office-fonts
+
+realvnc
 
 ttf-wps-fonts
 drawio-desktop-bin
