--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -218,6 +218,43 @@ mkdir /mnt/boot
 mount /dev/sda1 /mnt/boot
 ```
 
+## 4-B. If you want install ArchLinux with RAID
+
+### 4-B-1. Remove old RAID (If u want)
+
+    1. In the openSUSE 12.3 installer, switch to the console.
+    2. List your devices: `# df -kh`
+    3. Make sure the devices are unmounted: `# umount /dev/md124`
+    4. Check the details: `# mdadm --detail /dev/md124`
+    5. Stop the device: `# mdadm -S /dev/md124`
+    6. Zero out the superblocks of physical devices that belong to the MD device:
+      `# mdadm --zero-superblock /dev/sdb1`
+    7. Switch back to the installer.
+    8. In the partitioning part of installer, refresh devices.
+    9. The MD devices should not be there now.
+
+### 4-B-1. Create RAID-1:
+
+```
+mdadm --create /dev/md0 --name=RAID1_DEV --verbose --level=0 --raid-devices=2 /dev/sdb1 /dev/sdc1
+```
+
+### 4-B-3. Create partition:
+```
+-/dev/sda1 -> boot (ef00)
+-/dev/sdb1 -> raid-1_0 (fd00)
+-/dev/sdc1 -> raid-1_1 (fd00)
+```
+
+### 4-B-4. Mount device
+
+``` bash
+mount /dev/md0 /mnt
+mkdir /mnt/boot 
+mount /dev/sda1 /mnt/boot
+```
+
+
 ## 5. Configure  mirror list for install arch-Linux and pacman
 
 1st, please go here
