--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -66,7 +66,7 @@ downgrade #downgrade package of pacman, suggest to use local
 ezusb # smart card dirver for EZ100PU
 # These are suggestion for font
 #ttf-google-fonts-git #good fonts for coding (like PT mono), but too heavey
-# consolas-font #for terminal #can't install with yay, must modify xorg-font-utils of denpendency in PKGBUILD file
+consolas-font #for terminal #can't install with yay, must modify xorg-font-utils of denpendency in PKGBUILD file
 ttf-ms-fonts # for Courier New, Georgia, Times New Roma
 ttf-paratype #good fonts for coding (like PT mono)
 ttf-meslo # for meslo
@@ -79,7 +79,7 @@ ttf-monaco # for monaco
 
 ```bash
 #select 1 of 3
-ocl-icd intel-compute-runtime opencl-headers 
+#intel ocl-icd intel-compute-runtime opencl-headers 
 #amd-gpu opencl-mesa opencl-headers 
 #cuda opencl-nvidia python-pycuda #nvidia-gpi
 
