--- a/c06.configure-zsh.md
+++ b/c06.configure-zsh.md
@@ -21,78 +21,17 @@ cd ./oh-my-zsh/tools
 sh install.sh
 ```
 
-## 3. Install powerline-font
 
-Go here to download those files:
+## 3. Configure themes for powerlevel9k or bureau
 
-```text
-git clone https://github.com/powerline/fonts.git powerlinefonts
-```
+You then need to select this theme in your 
 
-and install it:
-
-```bash
-cd ./powerlinefonts
-sh install.sh
-```
-
-## 4. Install aweason-powerline-font
-
-Go here to download those files:
-
-```text
-git clone https://github.com/gabrielelana/awesome-terminal-fonts.git awesome-terminal-fonts
-```
-
-and install it:
-
-```bash
-cd ./awesome-terminal-fonts
-sh install.sh
-```
-
-## 5. Configure themes for powerlevel9k or bureau
-
-### 5-1. with bureau theme\(easy, clear, recommend\)
-
-You then need to select this theme in your `~/.zshrc`:
+`~/.zshrc`:
 
 ```text
 ZSH_THEME="bureau"
 ```
 
-### 5-2. with powerlevel9k theme
-
-Command:
-
-```text
-git clone https://github.com/bhilburn/powerlevel9k.git ~/.oh-my-zsh/custom/themes/powerlevel9k
-```
-
-You then need to select this theme in your `~/.zshrc`:
-
-```text
-ZSH_THEME="powerlevel9k/powerlevel9k"
-```
-
-append these to your `~/.zshrc`
-
-```text
-POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(context dir vcs)
-POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status root_indicator background_jobs time)
-```
-
-append these to your `~/.zshrc`
-
-```text
-POWERLEVEL9K_MODE='awesome-fontconfig'
-```
-
-## 6.Configure zsh for gnome-terminal and default shell
-
-`chsh -s /bin/zsh`
-
-`reboot`
 
 ## 7.Configure zsh for vscode-terminal
 
