--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -13,7 +13,7 @@ gnome-system-monitor
 gnome-calculator
 man
 chromium
-pixz # parallel compress/decompress for xz
+pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
 pinta #(good paint tool on the linux)
 nomacs gimp #(viewer and editor for image)
