--- a/c04.configure-vscode-that-like-atom-editor.md
+++ b/c04.configure-vscode-that-like-atom-editor.md
@@ -45,6 +45,7 @@ Monaco
 ## 2.  Needed Package of VSCode package
 
 ```bash
+Graphviz Markdown Preview
 Atom One Dark Theme
 beautify
 bash beautify
