--- a/c04.configure-vscode-that-like-atom-editor.md
+++ b/c04.configure-vscode-that-like-atom-editor.md
@@ -45,36 +45,31 @@ Monaco
 ## 2.  Needed Package of VSCode package
 
 ```bash
-Graphviz Markdown Preview
-Atom One Dark Theme
-beautify
-bash beautify
-Browser Preview
-vscode-icon
-C/C++ 
-C/C++ Snippets
-CMake Tools
-Doxygen Documentation Generator
-LaTeX Workshop
-Python #pylintrc is necessary
-autoDocstring #doc for python
-VHDL
-Modern VHDL
-Verilog HDL/SystemVerilog
-verilog_Testbench
-Markdown All in one
-markdownlint
-Markdown Preview Github
-Markdown Preview Enhance
-Markdown PDF
-Path Autocomplete
-Path Intellsensev
-Graphviz Prewiew
-Graphviz language support
-rust(rls) # rustup is necessary
-Rust Doc Viewer
-Rainbow End
-vscode-pdf
+akamud.vscode-theme-onedark
+auchenberg.vscode-browser-preview
+austin.code-gnu-global
+cschlosser.doxdocgen
+DavidAnson.vscode-markdownlint
+EFanZh.graphviz-preview
+frinkr.pdf
+geeklearningio.graphviz-markdown-preview
+hars.CppSnippets
+James-Yu.latex-workshop
+jduponchelle.rainbow-end
+JScearcy.rust-doc-viewer
+ms-python.python
+ms-vscode.cpptools
+mshr-h.veriloghdl
+puorc.awesome-vhdl
+rjyoung.vscode-modern-vhdl-support
+rust-lang.rust
+shd101wyy.markdown-preview-enhanced
+Stephanvs.dot
+twxs.cmake
+vscode-icons-team.vscode-icons
+yhpnoraa.beauty
+yzane.markdown-pdf
+yzhang.markdown-all-in-one
 ```
 
 ## 3. Configure font
