--- a/c04.configure-vscode-that-like-atom-editor.md
+++ b/c04.configure-vscode-that-like-atom-editor.md
@@ -70,6 +70,32 @@ vscode-icons-team.vscode-icons
 yhpnoraa.beauty
 yzane.markdown-pdf
 yzhang.markdown-all-in-one
+akamud.vscode-theme-onedark
+auchenberg.vscode-browser-preview
+austin.code-gnu-global
+cschlosser.doxdocgen
+DavidAnson.vscode-markdownlint
+EFanZh.graphviz-preview
+frinkr.pdf
+geeklearningio.graphviz-markdown-preview
+hars.CppSnippets
+James-Yu.latex-workshop
+jduponchelle.rainbow-end
+joaompinto.vscode-graphviz
+JScearcy.rust-doc-viewer
+ms-python.python
+ms-vscode.cpptools
+mshr-h.veriloghdl
+puorc.awesome-vhdl
+rjyoung.vscode-modern-vhdl-support
+rust-lang.rust
+shd101wyy.markdown-preview-enhanced
+Stephanvs.dot
+twxs.cmake
+vscode-icons-team.vscode-icons
+yhpnoraa.beauty
+yzane.markdown-pdf
+yzhang.markdown-all-in-one
 ```
 
 ## 3. Configure font
