--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -223,20 +223,39 @@ mount /dev/sda1 /mnt/boot
 ### 4-B-1. Remove old RAID (If u want)
 
     1. In the openSUSE 12.3 installer, switch to the console.
+    
     2. List your devices: `# df -kh`
+    
     3. Make sure the devices are unmounted: `# umount /dev/md124`
+    
     4. Check the details: `# mdadm --detail /dev/md124`
+    
     5. Stop the device: `# mdadm -S /dev/md124`
+    
     6. Zero out the superblocks of physical devices that belong to the MD device:
-      `# mdadm --zero-superblock /dev/sdb1`
+      `# mdadm --zero-superblock /dev/sdb1` -> one of RAID device
+      `# mdadm --zero-superblock /dev/sda1` -> one of RAID device
+      
     7. Switch back to the installer.
+    
     8. In the partitioning part of installer, refresh devices.
+    
     9. The MD devices should not be there now.
 
 ### 4-B-1. Create RAID-1:
 
 ```
 mdadm --create /dev/md0 --name=RAID1_DEV --verbose --level=0 --raid-devices=2 /dev/sdb1 /dev/sdc1
+```
+
+Waitting for raid created,
+
+should be some minute (nvmessd)
+
+check progress
+
+```
+mdadm -D /dev/md0
 ```
 
 ### 4-B-3. Create partition:
