--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -244,8 +244,9 @@ mount /dev/sda1 /mnt/boot
 
 ### 4-B-1. Create RAID-1:
 
+Create RAID-1 with 2 disk
 ```
-mdadm --create /dev/md0 --name=RAID1_DEV --verbose --level=0 --raid-devices=2 /dev/sdb1 /dev/sdc1
+mdadm --create /dev/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/sdb1 /dev/sdc1
 ```
 
 Waitting for raid created,
