--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -244,7 +244,7 @@ mount /dev/sda1 /mnt/boot
 
 ### 4-B-1. Create RAID-1:
 
-Create RAID-1 with 2 disk
+Create RAID-1 with 2 disk:
 ```
 mdadm --create /dev/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/sdb1 /dev/sdc1
 ```
@@ -259,14 +259,20 @@ check progress
 mdadm -D /dev/md0
 ```
 
-### 4-B-3. Create partition:
+### 4-B-3. Create(Check) partition:
 ```
 -/dev/sda1 -> boot (ef00)
 -/dev/sdb1 -> raid-1_0 (fd00)
 -/dev/sdc1 -> raid-1_1 (fd00)
 ```
 
-### 4-B-4. Mount device
+### 4-B-4. Create filesystem
+
+```
+mkfs.ext4 /dev/md0 -L "RAID_SYS"
+```
+
+### 4-B-5. Mount device
 
 ``` bash
 mount /dev/md0 /mnt
