--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -242,7 +242,14 @@ mount /dev/sda1 /mnt/boot
     
     9. The MD devices should not be there now.
 
-### 4-B-1. Create RAID-1:
+### 4-B-1. Create(Check) partition:
+```
+-/dev/sda1 -> boot (ef00)
+-/dev/sdb1 -> raid-1_0 (fd00)
+-/dev/sdc1 -> raid-1_1 (fd00)
+```
+
+### 4-B-2. Create RAID-1:
 
 Create RAID-1 with 2 disk:
 ```
@@ -259,20 +266,14 @@ check progress
 mdadm -D /dev/md0
 ```
 
-### 4-B-3. Create(Check) partition:
-```
--/dev/sda1 -> boot (ef00)
--/dev/sdb1 -> raid-1_0 (fd00)
--/dev/sdc1 -> raid-1_1 (fd00)
-```
 
-### 4-B-4. Create filesystem
+### 4-B-3. Create filesystem
 
 ```
-mkfs.ext4 /dev/md0 -L "RAID_SYS"
+mkfs.xfs /dev/md0 -L "RAID_SYS"
 ```
 
-### 4-B-5. Mount device
+### 4-B-4. Mount device
 
 ``` bash
 mount /dev/md0 /mnt
@@ -651,6 +652,7 @@ HOOKS="base udev autodetect modconf block mdadm_udev filesystems fsck"
 BINARIES="/sbin/mdmon"
 ```
 
+`mkinitcpio -p linux`
 
 ## 14. reboot and login your user
 
