--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -266,14 +266,25 @@ check progress
 mdadm -D /dev/md0
 ```
 
+### 4-B-3. Update configuration file
 
-### 4-B-3. Create filesystem
+```
+# mdadm --detail --scan >> /etc/mdadm.conf
+```
+
+### 4-B-4. Assemble the array
+
+```
+# mdadm --assemble --scan
+```
+
+### 4-B-5. Create filesystem
 
 ```
 mkfs.xfs /dev/md0 -L "RAID_SYS"
 ```
 
-### 4-B-4. Mount device
+### 4-B-6. Mount device
 
 ``` bash
 mount /dev/md0 /mnt
