--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -403,6 +403,14 @@ timedatectl set-timezone Asia/Taipei
 timedatectl set-ntp true
 ```
 
+check:
+
+```
+timedatectl
+```
+
+find `timezone` and `NTP`
+
 ## 11. Configure yay and enabel 32bits package for pacman
 
 ```bash
