--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -292,6 +292,23 @@ mkdir /mnt/boot
 mount /dev/sda1 /mnt/boot
 ```
 
+### 4-B-7 Install ArchLinux
+
+```
+pacstrap /mnt base base-devel linux linux-firmware xfsprogs mdadm
+```
+
+### 4-B-8 Copy `mdadm.conf`
+
+```
+mdadm --detail --scan >> /mnt/etc/mdadm.conf
+```
+
+#### 4-B-9 Chroot
+
+```
+arch-chroot /mnt
+```
 
 ## 5. Configure  mirror list for install arch-Linux and pacman
 
