--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -685,7 +685,7 @@ open `vim /etc/mkinitcpio.conf`
 modify here:
 ```
 HOOKS="base udev autodetect modconf block mdadm_udev filesystems fsck"
-BINARIES="/sbin/mdmon"
+BINARIES=(mdmon)
 ```
 
 `mkinitcpio -p linux`
