--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -304,11 +304,35 @@ pacstrap /mnt base base-devel linux linux-firmware xfsprogs mdadm
 mdadm --detail --scan >> /mnt/etc/mdadm.conf
 ```
 
-#### 4-B-9 Chroot
+#### 4-B-9 genfstab
+
+```
+genfstab /mnt -p -U >> /mnt/etc/fsbab
+```
+
+#### 4-B-10 Chroot
 
 ```
 arch-chroot /mnt
 ```
+
+
+## 4-B-10. Configuer mkinitcpio with raid
+
+Needed package:
+``` bash
+pacman -S xfsprogs #if ur fs is xfs
+pacman -S mdadm
+```
+
+open `vim /etc/mkinitcpio.conf`
+modify here:
+```
+HOOKS="base udev autodetect modconf block mdadm_udev filesystems fsck"
+BINARIES=(mdmon)
+```
+
+`mkinitcpio -p linux`
 
 ## 5. Configure  mirror list for install arch-Linux and pacman
 
@@ -672,23 +696,6 @@ initrd /initramfs-linux.img
 initrd /amd-ucode
 options cryptdevice=UUID=<YOUR-PARTITION-UUID>:lvm:allow-discards resume=/dev/mapper/vg0-swap root=/dev/mapper/vg0-root rw quiet
 ```
-
-## 13-B. Configuer boot with raid
-
-Needed package:
-``` bash
-pacman -S xfsprogs #if ur fs is xfs
-pacman -S mdadm
-```
-
-open `vim /etc/mkinitcpio.conf`
-modify here:
-```
-HOOKS="base udev autodetect modconf block mdadm_udev filesystems fsck"
-BINARIES=(mdmon)
-```
-
-`mkinitcpio -p linux`
 
 ## 14. reboot and login your user
 
