--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -233,8 +233,11 @@ mount /dev/sda1 /mnt/boot
     5. Stop the device: `# mdadm -S /dev/md124`
     
     6. Zero out the superblocks of physical devices that belong to the MD device:
-      `# mdadm --zero-superblock /dev/sdb1` -> one of RAID device
-      `# mdadm --zero-superblock /dev/sda1` -> one of RAID device
+      `# mdadm --zero-superblock /dev/sdb1` -> one of RAID device`
+      `# mdadm --zero-superblock /dev/sda1` -> one of RAID device`
+       or
+      `# mdadm --zero-superblock /dev/nvme0n1p1` -> one of RAID device`
+      `# mdadm --zero-superblock /dev/nvme1n1p1` -> one of RAID device` 
       
     7. Switch back to the installer.
     
@@ -249,13 +252,25 @@ mount /dev/sda1 /mnt/boot
 -/dev/sdc1 -> raid-1_1 (fd00)
 ```
 
+or
+
+
+-/dev/sda1 -> boot (ef00)
+-/dev/nvme0n1p1 -> raid-1_0 (fd00)
+-/dev/nvme1n1p1 -> raid-1_1 (fd00)
+```
+
 ### 4-B-2. Create RAID-1:
 
 Create RAID-1 with 2 disk:
 ```
-mdadm --create /dev/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/sdb1 /dev/sdc1
+mdadm --create /dev/md/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/sdb1 /dev/sdc1
 ```
+or
 
+```
+mdadm --create /dev/md/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/nvme1n1p1 /dev/nvme1n1p1
+```
 Waitting for raid created,
 
 should be some minute (nvmessd)
@@ -263,7 +278,7 @@ should be some minute (nvmessd)
 check progress
 
 ```
-mdadm -D /dev/md0
+mdadm -D /dev/md/md0
 ```
 
 ### 4-B-3. Update configuration file
@@ -281,13 +296,13 @@ mdadm -D /dev/md0
 ### 4-B-5. Create filesystem
 
 ```
-mkfs.xfs /dev/md0 -L "RAID_SYS"
+mkfs.xfs /dev/md/md0 -L "RAID_SYS"
 ```
 
 ### 4-B-6. Mount device
 
 ``` bash
-mount /dev/md0 /mnt
+mount /dev/md/md0 /mnt
 mkdir /mnt/boot 
 mount /dev/sda1 /mnt/boot
 ```
