--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -26,7 +26,7 @@ Model is your disk model. ArchLinux system can give it alias.
 
 If your disk is sata device then  it can show /dev/sda or /dev/sdb or /dev/sdc ...
 
-If your disk is nvme device then it can show /dev/nvme0 or /dev/nvme1 or /dev/nvme2 ...
+If your disk is device then it can show /dev/0 or /dev/nvme1 or /dev/nvme2 ...
 
 Select your disk in this list which you want to install.  
 
@@ -246,6 +246,7 @@ mount /dev/sda1 /mnt/boot
     9. The MD devices should not be there now.
 
 ### 4-B-1. Create(Check) partition:
+
 ```
 -/dev/sda1 -> boot (ef00)
 -/dev/sdb1 -> raid-1_0 (fd00)
@@ -254,7 +255,7 @@ mount /dev/sda1 /mnt/boot
 
 or
 
-
+```
 -/dev/sda1 -> boot (ef00)
 -/dev/nvme0n1p1 -> raid-1_0 (fd00)
 -/dev/nvme1n1p1 -> raid-1_1 (fd00)
