--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -265,12 +265,12 @@ or
 
 Create RAID-1 with 2 disk:
 ```
-mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/sdb1 /dev/sdc1
+mdadm --create /dev/md/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/sdb1 /dev/sdc1
 ```
 or
 
 ```
-mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/nvme1n1p1 /dev/nvme1n1p1
+mdadm --create /dev/md/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/nvme1n1p1 /dev/nvme1n1p1
 ```
 Waitting for raid created,
 
@@ -281,6 +281,10 @@ check progress
 ```
 mdadm -D /dev/md/md0
 ```
+
+warning!!!!!
+
+sequence can't be changed
 
 ### 4-B-3. Update configuration file
 
