--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -265,18 +265,18 @@ or
 
 Create RAID-1 with 2 disk:
 ```
-mdadm --create /dev/md/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/sdb1 /dev/sdc1
+mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/sdb1 /dev/sdc1
 ```
 or
 
 ```
-mdadm --create /dev/md/md0 --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/nvme1n1p1 /dev/nvme1n1p1
+mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/nvme1n1p1 /dev/nvme1n1p1
 ```
 
 
-warning!!!!!
+**warning!!!!!*
 
-sequence can't be changed
+**above command of sequence can't be changed**
 
 Waitting for raid created,
 
