--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -265,12 +265,12 @@ or
 
 Create RAID-1 with 2 disk:
 ```
-mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/sdb1 /dev/sdc1
+mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md0 /dev/sdb1 /dev/sdc1
 ```
 or
 
 ```
-mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/nvme1n1p1 /dev/nvme1n1p1
+mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md0 /dev/nvme1n1p1 /dev/nvme1n1p1
 ```
 
 
@@ -285,7 +285,7 @@ should be some minute (nvmessd)
 check progress
 
 ```
-mdadm -D /dev/md/md0
+mdadm -D /dev/md0
 ```
 
 ### 4-B-3. Update configuration file
@@ -303,13 +303,13 @@ mdadm -D /dev/md/md0
 ### 4-B-5. Create filesystem
 
 ```
-mkfs.xfs /dev/md/md0 -L "RAID_SYS"
+mkfs.xfs /dev/md0 -L "RAID_SYS"
 ```
 
 ### 4-B-6. Mount device
 
 ``` bash
-mount /dev/md/md0 /mnt
+mount /dev/md0 /mnt
 mkdir /mnt/boot 
 mount /dev/sda1 /mnt/boot
 ```
