--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -274,7 +274,7 @@ mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md0 /d
 ```
 
 
-**warning!!!!!*
+**warning!!!!!**
 
 **above command of sequence can't be changed**
 
@@ -300,13 +300,19 @@ mdadm -D /dev/md0
 # mdadm --assemble --scan
 ```
 
-### 4-B-5. Create filesystem
+### 4-B-5. Create parted for the new md0
+
+```
+cgdisk /dev/md0
+```
+
+### 4-B-6. Create filesystem
 
 ```
 mkfs.xfs /dev/md0 -L "RAID_SYS"
 ```
 
-### 4-B-6. Mount device
+### 4-B-7. Mount device
 
 ``` bash
 mount /dev/md0 /mnt
@@ -314,25 +320,25 @@ mkdir /mnt/boot
 mount /dev/sda1 /mnt/boot
 ```
 
-### 4-B-7 Install ArchLinux
+### 4-B-8 Install ArchLinux
 
 ```
 pacstrap /mnt base base-devel linux linux-firmware xfsprogs mdadm
 ```
 
-### 4-B-8 Copy `mdadm.conf`
+### 4-B-9 Copy `mdadm.conf`
 
 ```
 mdadm --detail --scan >> /mnt/etc/mdadm.conf
 ```
 
-#### 4-B-9 genfstab
+#### 4-B-10 genfstab
 
 ```
 genfstab /mnt -p -U >> /mnt/etc/fsbab
 ```
 
-#### 4-B-10 Chroot
+#### 4-B-11 Chroot
 
 ```
 arch-chroot /mnt
