--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -288,45 +288,45 @@ check progress
 mdadm -D /dev/md0
 ```
 
-### 4-B-3. Update configuration file
-
-```
-# mdadm --detail --scan >> /etc/mdadm.conf
-```
-
-### 4-B-4. Assemble the array
+### 4-B-3. Assemble the array
 
 ```
 # mdadm --assemble --scan
 ```
 
-### 4-B-5. Create parted for the new md0
+### 4-B-4. Create parted for the new md0
 
 ```
 cgdisk /dev/md0
 ```
 
-### 4-B-6. Create filesystem
+result -> ---- free space ~1Kb
+            |
+            -- md0p1
+            |
+            -- ...
+
+### 4-B-5. Create filesystem
 
 ```
-mkfs.xfs /dev/md0 -L "RAID_SYS"
+mkfs.xfs /dev/md0p1 -L "RAID_SYS"
 ```
 
-### 4-B-7. Mount device
+### 4-B-6. Mount device
 
 ``` bash
-mount /dev/md0 /mnt
+mount /dev/md0p1 /mnt
 mkdir /mnt/boot 
 mount /dev/sda1 /mnt/boot
 ```
 
-### 4-B-8 Install ArchLinux
+### 4-B-7 Install ArchLinux
 
 ```
 pacstrap /mnt base base-devel linux linux-firmware xfsprogs mdadm
 ```
 
-### 4-B-9 Copy `mdadm.conf`
+### 4-B-8 Update `mdadm.conf`
 
 ```
 mdadm --detail --scan >> /mnt/etc/mdadm.conf
