--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -291,7 +291,7 @@ mdadm -D /dev/md0
 ### 4-B-3. Assemble the array
 
 ```
-# mdadm --assemble --scan
+# mdadm --assemble --run
 ```
 
 ### 4-B-4. Create parted for the new md0
