--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -42,7 +42,8 @@ powertop # monitor power for /dev
 # It can implement copy and exclude some files or directories:
 # rsync -av --progress SourceFolder /DestinationFolder --exclude TheFolderOrFileNameToExclude)
 #net-tools #ifconfig route -n
-smartmontools #check ssd smart [Media_Wearout_Indicator]
+smartmontools # check "SATA" ssd smart [Media_Wearout_Indicator]
+nvme-cli # check "nvme" ssd smart : # nvme smart-log /dev/nvme0
 cdrtools #can use wodim to burn .iso file to cd/dvd/bd
 #command is wodim dev=/dev/cdrom -v -data your_iso_file.iso
 pcsc-tools #smart card tools for command such as pcsc_scan
