--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -520,7 +520,7 @@ It  permit your system can install 32-bit package.
 2. Configure sudo
 
    ```bash
-   pacman -S sudo
+   pacman -S sudo vi
    visudo
    #go to line 82, uncomment:
    %wheel ALL=(ALL) ALL
