--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -265,12 +265,12 @@ or
 
 Create RAID-1 with 2 disk:
 ```
-mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md0 /dev/sdb1 /dev/sdc1
+mdadm --create --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/sdb1 /dev/sdc1
 ```
 or
 
 ```
-mdadm --create --name=RAID1_DEV --verbose --level=1 --raid-devices=2 /dev/md0 /dev/nvme1n1p1 /dev/nvme1n1p1
+mdadm --create --verbose --level=1 --raid-devices=2 /dev/md/md0 /dev/nvme1n1p1 /dev/nvme1n1p1
 ```
 
 
@@ -285,7 +285,7 @@ should be some minute (nvmessd)
 check progress
 
 ```
-mdadm -D /dev/md0
+mdadm -D /dev/md/md0
 ```
 
 ### 4-B-3. Assemble the array
@@ -297,7 +297,7 @@ mdadm -D /dev/md0
 ### 4-B-4. Create parted for the new md0
 
 ```
-cgdisk /dev/md0
+cgdisk /dev/md/md0
 ```
 
 result -> ---- free space ~1Kb
@@ -315,7 +315,7 @@ mkfs.xfs /dev/md0p1 -L "RAID_SYS"
 ### 4-B-6. Mount device
 
 ``` bash
-mount /dev/md0p1 /mnt
+mount /dev/md/md0p1 /mnt
 mkdir /mnt/boot 
 mount /dev/sda1 /mnt/boot
 ```
@@ -331,6 +331,18 @@ pacstrap /mnt base base-devel linux linux-firmware xfsprogs mdadm
 ```
 mdadm --detail --scan >> /mnt/etc/mdadm.conf
 ```
+
+**Note:**
+
+mdadm's UUID != fstab's UUID
+
+mdadm's UUID -> /dev/md/md0
+
+mdadm's UUID -> /dev/md/md0p1
+
+options root=UUID=<UUID>
+
+this <UUID> should be mdadm's UUID
 
 #### 4-B-10 genfstab
 
@@ -356,7 +368,7 @@ pacman -S mdadm
 open `vim /etc/mkinitcpio.conf`
 modify here:
 ```
-HOOKS="base udev autodetect modconf block mdadm_udev filesystems fsck"
+HOOKS=(base udev autodetect modconf block *mdadm_udev* filesystems fsck)
 BINARIES=(mdmon)
 ```
 
