--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -332,6 +332,17 @@ pacstrap /mnt base base-devel linux linux-firmware xfsprogs mdadm
 mdadm --detail --scan >> /mnt/etc/mdadm.conf
 ```
 
+Add email address here 
+`in file /mnt/etc/mdadm.conf`
+```
+# When used in --follow (aka --monitor) mode, mdadm needs a
+# mail address and/or a program.  To start mdadm's monitor mode, enable
+# mdadm.service in systemd.
+#
+# If the lines are not found, mdadm will exit quietly
+MAILADDR user@aa.com
+```
+
 **Note:**
 
 mdadm's UUID != fstab's UUID
