--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -61,6 +61,12 @@ pacman –S lightdm lightdm-gtk-greeter lightdm-gtk-greeter-settings
 # otherwise the image cannot be loaded when login
 ```
 
+and lock-screen-package by yay
+
+```
+yay -S light-locker-settings 
+```
+
 Install gnome-terminal for first terminal in GUI
 
 ```bash
