--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -12,6 +12,7 @@ libusb libusb-compat usbutils usbmuxd #(for usb)
 gnome-system-monitor
 gnome-calculator
 man
+lshw
 chromium
 pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
