--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -24,6 +24,17 @@ if nvidia VGA :
 
 `pacman -S xf86-video-noubeau mesa`
 
+Note: Don't forget add
+
+`MODULES="... nouveau ..."`
+
+into `mkinitcpio.conf`
+
+and
+
+`mkinitcpio -p linux`
+
+
 if AMD VGA :
 
 `pacman -S xf86-video-amdgpu mesa`
