--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -22,6 +22,14 @@ And install it :
 
 if nvidia VGA :
 
+<1> Proprietary 
+
+https://howto.lintel.in/install-nvidia-arch-linux/
+
+<2> open source driver
+
+(bad performance, not recommand)
+
 `pacman -S xf86-video-noubeau mesa`
 
 Note: Don't forget add
