--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -22,13 +22,92 @@ And install it :
 
 if nvidia VGA :
 
-<1> Proprietary 
+<1> Proprietary driver (recommand, >=GTX-700s)
 
-https://howto.lintel.in/install-nvidia-arch-linux/
+### <1.1> Install dependency
 
-<2> open source driver
+```
+# pacman -S nvidia nvidia-utils nvidia-settings xorg-server-devel opencl-nvidia
+```
+### <1.2> Add pacman hook to compile module on kernel upgrades
 
-(bad performance, not recommand)
+```
+# vim /etc/pacman.d/hooks/nvidia.hook
+```
+
+fill
+
+```
+[Trigger]
+Operation=Install
+Operation=Upgrade
+Operation=Remove
+Type=Package
+Target=nvidia
+Target=linux
+# Change the linux part above and in the Exec line if a different kernel is used
+
+[Action]
+Description=Update Nvidia module in initcpio
+Depends=mkinitcpio
+When=PostTransaction
+NeedsTargets
+Exec=/bin/sh -c 'while read -r trg; do case $trg in linux) exit 0; esac; done; /usr/bin/mkinitcpio -p'
+```
+
+### <1.3> Blacklist nouveau driver
+
+```
+sudo bash -c "echo blacklist nouveau > /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
+```
+
+### <1.4> Add graphics card configuration in Xorg server
+
+```
+# nvidia-xconfig
+```
+
+You can also check
+
+```
+cat /etc/X11/xorg.conf
+```
+
+### <1.5> Load nvidia modules on boot – update firmware
+
+```
+# vim /etc/mkinitcpio.conf
+```
+
+append
+
+```
+MODULES=(nvidia nvidia_modeset nvidia_uvm nvidia_drm)
+```
+
+Finall, regenete *initramfs*
+
+```
+mkinitcpio -p linux
+```
+
+### <1.6> Reboot 
+
+```
+reboot
+```
+
+### <1.7> Check
+
+```
+xrandr --listproviders
+```
+
+```
+nvidia-smi
+```
+
+<2> open source driver (bad performance, not recommand)
 
 `pacman -S xf86-video-noubeau mesa`
 
