--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -20,16 +20,14 @@ Select your driver below table :
 
 And install it :
 
-if nvidia VGA :
+### if nvidia VGA :
 
-<1> Proprietary driver (recommand, >=GTX-700s)
-
-### <1.1> Install dependency
+#### (1) Install dependency
 
 ```
 # pacman -S nvidia nvidia-utils nvidia-settings xorg-server-devel opencl-nvidia
 ```
-### <1.2> Add pacman hook to compile module on kernel upgrades
+#### (2) Add pacman hook to compile module on kernel upgrades
 
 ```
 # vim /etc/pacman.d/hooks/nvidia.hook
@@ -55,13 +53,13 @@ NeedsTargets
 Exec=/bin/sh -c 'while read -r trg; do case $trg in linux) exit 0; esac; done; /usr/bin/mkinitcpio -p'
 ```
 
-### <1.3> Blacklist nouveau driver
+#### (3) Blacklist nouveau driver
 
 ```
 sudo bash -c "echo blacklist nouveau > /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
 ```
 
-### <1.4> Add graphics card configuration in Xorg server
+#### (4) Add graphics card configuration in Xorg server
 
 ```
 # nvidia-xconfig
@@ -73,7 +71,7 @@ You can also check
 cat /etc/X11/xorg.conf
 ```
 
-### <1.5> Load nvidia modules on boot – update firmware
+#### (5) Load nvidia modules on boot – update firmware
 
 ```
 # vim /etc/mkinitcpio.conf
@@ -91,13 +89,13 @@ Finall, regenete *initramfs*
 mkinitcpio -p linux
 ```
 
-### <1.6> Reboot 
+#### (6) Reboot 
 
 ```
 reboot
 ```
 
-### <1.7> Check
+#### (7) Check
 
 ```
 xrandr --listproviders
@@ -107,15 +105,15 @@ xrandr --listproviders
 nvidia-smi
 ```
 
-if AMD VGA :
+### if AMD VGA :
 
 `pacman -S xf86-video-amdgpu mesa`
 
-if Virtual Box
+### if Virtual Box
 
 `pacman -S mesa`
 
-if Intel VGA :
+### if Intel VGA :
 
 `pacman -S xf86-video-intel mesa`
 
