--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -353,7 +353,7 @@ mdadm's UUID -> /dev/md/md0p1
 
 options root=UUID=<UUID>
 
-this <UUID> should be mdadm's UUID
+this <UUID> should be </dev/md/md0p1>'s UUID
 
 #### 4-B-10 genfstab
 
