--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -107,7 +107,7 @@ nvidia-smi
 
 ### if AMD VGA :
 
-`pacman -S xf86-video-amdgpu mesa`
+`pacman -S xf86-video-amdgpu mesa amdvlk`
 
 ### if Virtual Box
 
@@ -115,7 +115,7 @@ nvidia-smi
 
 ### if Intel VGA :
 
-`pacman -S xf86-video-intel mesa`
+`pacman -S xf86-video-intel mesa vulkan-intel`
 
 ## 2. Install xorg
 
