--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -19,6 +19,7 @@ evince #(gnome pdf viewer)
 pinta #(good paint tool on the linux)
 nomacs gimp #(viewer and editor for image)
 vlc #(video player)
+linux-headers #(build linux kernel modules for addtional driver)
 deadbeef #(audio player)
 flameshot #(image cutter)
 thunderbird #(outside party mail manager)
