--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -7,7 +7,7 @@
 ```bash
 #gnome-disk-utility #(can assign filesystem label without umount)
 gparted #(GUI of parted)
-android-file-transfer ntfs-3g exfat-utils #driver for andorid-fs-ts, ntfs, exfat
+android-file-transfer ntfs-3g exfat-utils android-udev #driver for andorid-fs-ts, ntfs, exfat
 libusb libusb-compat usbutils usbmuxd #(for usb)
 gnome-system-monitor
 gnome-calculator
