--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -27,7 +27,7 @@ thunderbird #(outside party mail manager)
 system-config-printer cups #(see C5. Good tool for setting up printer, or you can install manually)
 #atom #(see: C1. Configure Atom editor)
 code #(see: C4. Configure vscode that like atom editor)
-gedit # Don't forget enable <Quick Highlight> in <preference->Plugin>  , good text amd code editor
+gedit hspell libvoikko nuspell # Don't forget enable <Quick Highlight> in <preference->Plugin>  , good text amd code editor
 wget
 p7zip unrar #(rar and 7z supported)
 # networkmanager # auto satisfied by firefox
