--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -14,7 +14,7 @@ gnome-system-monitor
 gnome-calculator
 man
 lshw
-chromium
+#chromium
 pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
 pinta #(good paint tool on the linux)
