--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -22,7 +22,7 @@ nomacs gimp #(viewer and editor for image)
 vlc #(video player)
 linux-headers #(build linux kernel modules for addtional driver)
 deadbeef #(audio player)
-flameshot #(image cutter)
+# flameshot #(image cutter)
 thunderbird #(outside party mail manager)
 system-config-printer cups #(see C5. Good tool for setting up printer, or you can install manually)
 #atom #(see: C1. Configure Atom editor)
@@ -61,6 +61,7 @@ wps-office
 wps-office-fonts
 
 realvnc
+flameshot-git #(image cutter)
 
 ttf-wps-fonts
 drawio-desktop-bin
