--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -3,7 +3,7 @@
 ## 1. Install package
 
 ```text
-sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-anthy
+sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-anthy fcitx5-material-color
 ```
 
 ## 2. Go to keyboard, set layout as
