--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -3,7 +3,7 @@
 ## 1. Install package
 
 ```text
-sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-anthy fcitx5-material-color
+sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-mozc fcitx5-material-color
 ```
 
 ## 2. Go to keyboard, set layout as
@@ -14,7 +14,7 @@ sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-anthy fcitx5-ma
 
 ![input_fcitx_pic](image/input_fcitx.png)
 
-## 4.set enviroment variable for fcitx
+## 4. set enviroment variable for fcitx
 
 ```text
 export GTK_IM_MODULE=fcitx  
@@ -27,5 +27,24 @@ Copy it to
 ```text
  /etc/profile
 ```
+## 5. set material-color
 
-## 5.reboot to test
+open `~/.config/fcitx5/conf/classicui.conf`
+
+append:
+
+```text
+# 垂直候选列表
+Vertical Candidate List=
+
+# 按屏幕 DPI 使用
+PerScreenDPI=True
+
+# Font (设置成你喜欢的字体)
+Font="思源黑体 CN Medium 13"
+
+# 主题
+Theme=Material-Color-Brown
+```
+
+## 6.reboot to test
