--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -223,6 +223,25 @@ result likes:
 
 ![button_them_pic](image/btn_result_2.PNG)
 
+### 7-4 How to close(or hide) nm-applet icon on the right bottom? (Cinnamon 5.0)
+
+If you don't use *NetworkManager*, even if you disable it on *systemd*
+
+But the icon always display on right bottom as following 2 pictures:
+
+![](https://i.imgur.com/ZnIVjum.png)
+![](https://i.imgur.com/k0DjVaF.png)
+
+Solution:
+
+```
+cp /etc/xdg/autostart/nm-applet.desktop ~/.config/autostart/nm-applet.desktop
+X-GNOME-Autostart-enabled=false >> ~/.config/autostart/nm-applet.desktop
+reboot
+```
+
+
+
 ## 8. If install gnome
 
 ## 8. Installing command
