--- a/2.install-cinnamon-gnome-desktop.md
+++ b/2.install-cinnamon-gnome-desktop.md
@@ -236,7 +236,7 @@ Solution:
 
 ```
 cp /etc/xdg/autostart/nm-applet.desktop ~/.config/autostart/nm-applet.desktop
-X-GNOME-Autostart-enabled=false >> ~/.config/autostart/nm-applet.desktop
+echo "X-GNOME-Autostart-enabled=false" >> ~/.config/autostart/nm-applet.desktop
 reboot
 ```
 
