--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -12,6 +12,7 @@ ntfs-3g exfat-utils #driver for andorid-fs-ts, ntfs, exfat
 libusb libusb-compat usbutils usbmuxd #(for usb)
 gnome-system-monitor
 gnome-calculator
+crda #Wireless manager. (Install it to solve dmesg error: platform regulatory.0: Direct firmware load for regulatory.db failed with error -2)
 man
 lshw
 xsel # cmd | xclip -ib , to copy stdout to clipboard
