--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -17,9 +17,9 @@ sudo pacman -S fcitx5-im fcitx5-configtool fcitx5-chewing fcitx5-mozc fcitx5-mat
 ## 4. set enviroment variable for fcitx
 
 ```text
-export GTK_IM_MODULE=fcitx  
-export QT_IM_MODULE=fcitx  
-export XMODIFIERS="@im=fcitx"
+export GTK_IM_MODULE=fcitx5  
+export QT_IM_MODULE=fcitx5  
+export XMODIFIERS="@im=fcitx5"
 ```
 
 Copy it to
