--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -245,6 +245,10 @@ mount /dev/sda1 /mnt/boot
     
     9. The MD devices should not be there now.
 
+#### Why execute parted(gparted) before mdadm 
+
+[Refer to here](https://unix.stackexchange.com/questions/550497/mdadm-raid1-array-is-it-required-to-partition)
+
 ### 4-B-1. Create(Check) partition:
 
 ```
