--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -245,9 +245,6 @@ mount /dev/sda1 /mnt/boot
     
     9. The MD devices should not be there now.
 
-#### Why execute parted(gparted) before mdadm 
-
-[Refer to here](https://unix.stackexchange.com/questions/550497/mdadm-raid1-array-is-it-required-to-partition)
 
 ### 4-B-1. Create(Check) partition:
 
@@ -264,6 +261,11 @@ or
 -/dev/nvme0n1p1 -> raid-1_0 (fd00)
 -/dev/nvme1n1p1 -> raid-1_1 (fd00)
 ```
+
+#### NOTE: Why execute parted(gparted) before mdadm 
+
+[Refer to here](https://unix.stackexchange.com/questions/550497/mdadm-raid1-array-is-it-required-to-partition)
+
 
 ### 4-B-2. Create RAID-1:
 
