--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -524,15 +524,34 @@ rm -rf yay
 Open `pacman.conf`:
 ```
 vim /etc/pacman.conf
-```
-
-go to line 93 and line 94, uncomment :
-
+``` 
+uncomment :
+   
 ```text
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 ```
+   
+and search `Color`, change as:
 
+```text
+# Misc options
+#UseSyslog
+Color
+#NoProgressBar
+CheckSpace
+#VerbosePkgLists
+ParallelDownloads = 6
+#ILoveCandy   
+```
+
+open `/etc/makepkg.conf`
+
+```
+MAKEFLAGS="-j$(nproc)"
+```
+  
+   
 It  permit your system can install 32-bit package.
 
 ## 12. Add user and configure sudo
