--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -58,8 +58,15 @@ usbutils
 
 ```bash
 brave-bin
+
+# WPS
 wps-office
 wps-office-fonts
+wps-office-mime
+wps-office-mui-zh-cn
+ttf-ms-fonts
+ttf-wps-fonts
+pango
 
 realvnc
 flameshot-git #(image cutter)
