--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -15,6 +15,7 @@ gnome-calculator
 crda #Wireless manager. (Install it to solve dmesg error: platform regulatory.0: Direct firmware load for regulatory.db failed with error -2)
 man
 lshw
+simplescreenrecorder #record screen
 xsel # cmd | xclip -ib , to copy stdout to clipboard
 pixz pigz # parallel compress/decompress for xz and gz
 evince #(gnome pdf viewer)
