--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -47,4 +47,8 @@ Font="思源黑体 CN Medium 13"
 Theme=Material-Color-Brown
 ```
 
-## 6.reboot to test
+## 6. Go to Fcitx Configuration, disable "show preedit in application"
+
+If dones't disable it, some editor will have a problme.
+
+## 7.reboot to test
