--- a/c03.configure-fcitx-chewing.md
+++ b/c03.configure-fcitx-chewing.md
@@ -49,6 +49,8 @@ Theme=Material-Color-Brown
 
 ## 6. Go to Fcitx Configuration, disable "show preedit in application"
 
+![](image/disable-preedit-fcitx5.PNG)
+
 If dones't disable it, some editor will have a problme.
 
 ## 7.reboot to test
