--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -60,6 +60,10 @@ usbutils
 ```bash
 brave-bin
 
+#
+ttf-cascadia-code # for terminal
+ttf-paratype # for PT Mono  
+
 # WPS
 wps-office
 wps-office-fonts
