--- a/3.install-good-tools-for-archlinux.md
+++ b/3.install-good-tools-for-archlinux.md
@@ -61,8 +61,8 @@ usbutils
 brave-bin
 
 #
-ttf-cascadia-code # for terminal
-ttf-paratype # for PT Mono  
+ttf-hack # for terminal
+ttf-paratype # for PT Mono / coding
 
 # WPS
 wps-office
