--- a/1.install-archlinux-with-efi-and-gpt-without-gui.md
+++ b/1.install-archlinux-with-efi-and-gpt-without-gui.md
@@ -355,7 +355,7 @@ mdadm's UUID != fstab's UUID
 
 mdadm's UUID -> /dev/md/md0
 
-mdadm's UUID -> /dev/md/md0p1
+fstab's UUID -> /dev/md/md0p1
 
 options root=UUID=<UUID>
 
